@@ -2,20 +2,36 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cryptomator</groupId>
 	<artifactId>cli</artifactId>
-	<version>0.6.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>Cryptomator CLI</name>
 	<description>Command line program to access encrypted files via WebDAV.</description>
 	<url>https://github.com/cryptomator/cli</url>
 
 	<properties>
-		<cryptofs.version>2.6.5</cryptofs.version>
-		<webdav-nio.version>2.0.3</webdav-nio.version>
-		<commons.cli.version>1.5.0</commons.cli.version>
-		<logback.version>1.2.13</logback.version>
-		<fuse-nio.version>1.3.3</fuse-nio.version>
-
-		<java.version>17</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<jdk.version>22</jdk.version>
+
+		<!-- native image options -->
+		<mainClass>org.cryptomator.cli.CryptomatorCli</mainClass>
+		<native.optimization>-Ob</native.optimization> <!-- default: no optimization/dev build-->
+
+		<!-- runtime dependencies -->
+		<cryptofs.version>2.7.0-beta1</cryptofs.version>
+		<webdav-nio.version>2.0.6</webdav-nio.version>
+		<fuse-nio.version>5.0.0</fuse-nio.version>
+		<logback.version>1.5.6</logback.version>
+		<slf4j.version>2.0.16</slf4j.version>
+
+		<!-- build dependencies -->
+		<jetbrains.annotations.version>24.0.1</jetbrains.annotations.version>
+		<picocli.version>4.7.6</picocli.version>
+
+		<!-- maven plugins -->
+		<maven-compiler.version>3.13.0</maven-compiler.version>
+		<maven-jar.version>3.3.0</maven-jar.version>
+		<maven-shade.version>3.6.0</maven-shade.version>
+		<maven-exec.version>3.4.1</maven-exec.version>
 	</properties>
 
 	<licenses>
@@ -33,6 +49,13 @@
 			<timezone>+1</timezone>
 			<organization>cryptomator.org</organization>
 			<organizationUrl>http://cryptomator.org</organizationUrl>
+		</developer>
+		<developer>
+			<name>Armin Schrenk</name>
+			<email>armin.schrenk@skymatic.de</email>
+			<timezone>+1</timezone>
+			<organization>Skymatic GmbH</organization>
+			<organizationUrl>https://skymatic.de</organizationUrl>
 		</developer>
 	</developers>
 
@@ -53,14 +76,18 @@
 			<version>${fuse-nio.version}</version>
 		</dependency>
 
-		<!-- Commons -->
 		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>${commons.cli.version}</version>
+			<groupId>info.picocli</groupId>
+			<artifactId>picocli</artifactId>
+			<version>${picocli.version}</version>
 		</dependency>
 
 		<!-- Logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
@@ -71,45 +98,101 @@
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.fusesource.jansi</groupId>
+			<artifactId>jansi</artifactId>
+			<version>2.4.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>${maven-compiler.version}</version>
 				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-					<release>${java.version}</release>
+					<release>${jdk.version}</release>
 					<showWarnings>true</showWarnings>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>info.picocli</groupId>
+							<artifactId>picocli-codegen</artifactId>
+							<version>${picocli.version}</version>
+						</path>
+					</annotationProcessorPaths>
+					<compilerArgs>
+						<arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
-
 			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>3.3.0</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar.version}</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>${mainClass}</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>${maven-shade.version}</version>
 				<executions>
 					<execution>
-						<id>make-assembly</id>
-						<phase>package</phase>
 						<goals>
-							<goal>single</goal>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+							<finalName>cryptomator-cli-${project.version}</finalName>
+							<transformers>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>${mainClass}</mainClass>
+								</transformer>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>META-INF/services/org.cryptomator.integrations.mount.MountService</resource>
+								</transformer>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>META-INF/services/org.cryptomator.jfuse.api.FuseBuilder</resource>
+								</transformer>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>META-INF/services/ch.qos.logback.classic.spi.Configurator</resource>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>${maven-exec.version}</version>
+				<executions>
+					<execution>
+						<id>test-run</id>
+						<goals>
+							<goal>exec</goal>
 						</goals>
 					</execution>
 				</executions>
 				<configuration>
-					<finalName>cryptomator-cli-${project.version}</finalName>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-					<appendAssemblyId>false</appendAssemblyId>
-					<archive>
-						<manifestEntries>
-							<Main-Class>org.cryptomator.cli.CryptomatorCli</Main-Class>
-							<Implementation-Version>${project.version}</Implementation-Version>
-						</manifestEntries>
-					</archive>
+					<executable>${env.JAVA_HOME}/bin/java</executable>
+					<arguments>
+						<argument>--module-path</argument>
+						<modulepath/>
+						<argument>--enable-native-access=org.cryptomator.jfuse.linux,org.cryptomator.jfuse.win,org.cryptomator.jfuse.mac</argument>
+						<argument>--module</argument>
+						<argument>org.cryptomator.cli/${mainClass}</argument>
+						<argument>--password:stdin</argument>
+						<argument>--mounter=org.cryptomator.frontend.fuse.mount.WinFspNetworkMountProvider</argument>
+						<argument>--mountPoint=X:\\</argument>
+						<argument>T:\\vaultFormat8</argument>
+					</arguments>
 				</configuration>
 			</plugin>
 		</plugins>
